force-app/main/default/objects/Learning_Plan_Course__c/Learning_Plan_Course__c.object-meta.xml
<CustomObject>
    <label>Learning Plan Course</label>
    <nameField>
        <displayFormat>LPC-{0000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>