force-app/main/default/objects/Learning_Plan_Course__c/fields/courseId__c.field-meta.xml
<CustomField>
    <fullName>courseId__c</fullName>
    <externalId>true</externalId>
    <label>courseId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>