force-app/main/default/objects/Learning_Plan_Course__c/fields/Learning_Plan__c.field-meta.xml
<CustomField>
    <fullName>Learning_Plan__c</fullName>
    <label>Learning Plan</label>
    <referenceTo>Learning_Plan__c</referenceTo>
    <relationshipLabel>Learning Plan Courses</relationshipLabel>
    <relationshipName>Learning_Plan_Courses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>