force-app/main/default/objects/Learning_Plan_Course__c/fields/LearningPlanId__c.field-meta.xml
<CustomField>
    <fullName>LearningPlanId__c</fullName>
    <externalId>true</externalId>
    <label>LearningPlanId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>